[QA-2295] Fix web chat messages getting cut off

--- a/packages/web/src/pages/chat-page/components/ChatMessageListItem.module.css
+++ b/packages/web/src/pages/chat-page/components/ChatMessageListItem.module.css
@@ -50,8 +50,8 @@
 
 .textWrapper {
   background-color: var(--bubble-color);
-  padding: var(--harmony-unit-4);
   text-align: left;
+  max-width: 448px;
 }
 
 .text {
